# ta-ss-comparative-study

./: .gitignore  CITATION.cff  MODELCARDS.md  Makefile  README.md  decision_log.md  decision_log_merges.txt  prompt_protocols.md  pyproject.toml
data/: DATASHEET.md  DATASHEET_v2.md  scenarios.csv  scenarios_pilot.csv  scenarios_smoke.csv
legacy/: mock_runner.py
notebooks/: analysis_notebook.ipynb
outputs/: automatic_trace_metrics.csv  baseline_similarity_table.csv  bootstrap_effect_sizes.csv  coder_ratings_raw.csv  difficulty_summary.csv  equivalence_test_results.csv  generated_dialogues.csv  generated_dialogues_claude-sonnet-4-5-20250929.csv  generated_dialogues_gemini-2.5-pro.csv  generated_dialogues_gpt-4o-2024-11-20.csv  generated_dialogues_meta-llama_Llama-3.1-70B-Instruct.csv  logistic_model_results.csv  mixed_model_results.csv  qa_responses_Qwen_Qwen2_5-72B-Instruct.csv  qa_responses_claude-sonnet-4-5-20250929.csv  qa_responses_deepseek-ai_DeepSeek-V3.csv  qa_responses_gemini-2_5-pro.csv  qa_responses_gpt-4o-2024-11-20.csv  qa_responses_gpt-4o-mini.csv  qa_responses_meta-llama_Llama-3_1-70B-Instruct.csv  qualitative_excerpts.csv  qualitative_failure_memo_scaffold.md  reliability_report.csv  robustness_consistency.csv  robustness_results.csv  use_case_confusion_matrix.csv  use_case_decisions.csv  use_case_summary.csv
prompts/: c1_teachable_agent.txt  c2_student_simulation.txt  c3_generic_learner.txt  c4_no_role_assistant.txt  naive_student_prompt.txt  transfer_probe.txt  tutor_replay_template.txt
reports/: analysis_plan.md  build_proposal.py  (+12 more)
(+29812 files in other folders)
