[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ta-comparative-analysis"
version = "0.1.0"
description = "Framework-Grounded Comparative Evaluation of Teachable Agent vs Student Simulation Protocols"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "openai>=1.25.0",
    "anthropic>=0.25.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.4",
    "krippendorff>=0.6.1",
    "nltk>=3.8.1",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.7.0",
    "python-docx>=1.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pymer4>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true
